--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,6 @@
 use_frameworks!
 
-platform :ios, '10.0'
+platform :ios, '15.0'
 
 target 'TBBasicLib_Example' do
   pod 'TBBasicLib', :path => '../'
@@ -9,5 +9,15 @@ target 'TBBasicLib_Example' do
     inherit! :search_paths
 
     
+  end
+end
+
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    # 全局统一最低 iOS 版本
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
+    end
   end
 end
